# Radiation-Testing-Benchmarks

./: .gitmodules  README.md
ATtiny85/: .gitignore  README.md
ATtiny85/00-Passive-No-Operation/: Makefile  main.c
ATtiny85/01-SRAM-Single-Write-Continuous-Read/: main.c  sram_single_write_continuous_read_attiny85.hex
ATtiny85/02-Simple-UART/: Makefile  main.c  simple_uart_attiny85.hex  sram_single_write_continuous_read_attiny85.hex
ATtiny85/03-SRAM-N-Write-Read-Cycles/: Makefile  main.c  sram_n_write_read_cycles.hex
ATtiny85/05-Watchdog-Triggering/: Makefile  main.c  watchdog_trigger_attiny85.hex
ATtiny85/Common/: timing.c  timing.h  usi_uart.c  usi_uart.h
ATtiny85/Passive-No-Operation/: Makefile
ATtiny85/SRAM-N-Write-Read-Cycles/: Makefile
ATtiny85/SRAM-Single-Write-Continuous-Read/: Makefile  main.c
ATtiny85/_scripts/: install_dependencies.sh
RP2xx0/: .gitignore  README.md  debug_flash.sh  debug_read.sh
RP2xx0/00-Passive-No-Operation/: build.sh  main.cpp
RP2xx0/01-SRAM-Single-Write-Continuous-Read/: CMakeLists.txt  addition.pio  build.sh  main.cpp
RP2xx0/01-SRAM-Single-Write-Continuous-Read/_elf/: sram-single-write-continuous-read_rp2040.elf  sram-single-write-continuous-read_rp2350_arm.elf  sram-single-write-continuous-read_rp2350_riscv.elf
RP2xx0/01-SRAM-Single-Write-Continuous-Read/_uf2/: sram-single-write-continuous-read_rp2040.uf2  sram-single-write-continuous-read_rp2350_arm.uf2  sram-single-write-continuous-read_rp2350_riscv.uf2
RP2xx0/02-Simple-USB/: CMakeLists.txt  build.sh  main.cpp
RP2xx0/03-SRAM-N-Write-Read-Cycles/: clean.sh  main.cpp
RP2xx0/04-PIO-Test/: CMakeLists.txt  build.sh  main.cpp
RP2xx0/04-PIO-Test/_elf/: pio-test_rp2040.elf  pio-test_rp2350_arm.elf  pio-test_rp2350_riscv.elf
RP2xx0/04-PIO-Test/_uf2/: pio-test_rp2040.uf2  pio-test_rp2350_arm.uf2  pio-test_rp2350_riscv.uf2
RP2xx0/05-Watchdog-Triggering/: CMakeLists.txt  build.sh  main.cpp
RP2xx0/Passive-No-Operation/: .gitignore  CMakeLists.txt  build.sh  main.cpp
RP2xx0/SRAM-N-Write-Read-Cycles/: CMakeLists.txt  build.sh  main.cpp
RP2xx0/SRAM-Single-Write-Continuous-Read/: CMakeLists.txt  build.sh  debug_flash.sh  main.cpp
RP2xx0/SRAM-Single-Write-Continuous-Read/_elf/: sram_single_write_continuous_read_rp2040.elf  sram_single_write_continuous_read_rp2350_arm.elf  sram_single_write_continuous_read_rp2350_riscv.elf
RP2xx0/SRAM-Single-Write-Continuous-Read/_uf2/: sram_single_write_continuous_read_rp2040.uf2  sram_single_write_continuous_read_rp2350_arm.uf2  sram_single_write_continuous_read_rp2350_riscv.uf2
RP2xx0/_scripts/: install_picotool.sh  install_riscv_compiler.sh
Tools/: .gitignore  monitor_large_transfer.py  monitor_slow_transfer.py  pyproject.toml
Tools/PicoSerialForwarder/: PicoSerialForwarder.ino
Tools/data/: rp2040_0_30k_cycles_2025_12_15_13_07_47.txt  rp2040_0_30k_pio_2025_12_15_13_06_08.txt  rp2040_0_cycles_100k_2025_12_15_16_40_39.txt  rp2040_0_cycles_100k_2025_12_15_16_40_39_metadata.csv  rp2040_0_cycles_50k_2025_12_15_13_31_13.txt  rp2040_0_cycles_50k_2025_12_15_13_31_13_metadata.csv  rp2040_0_cycles_75k_2025_12_15_16_24_03.txt  rp2040_0_cycles_75k_2025_12_15_16_24_03_metadata.csv  rp2040_1_30k_pio_2025_12_15_13_07_00.txt  rp2040_1_cycles_50k_2025_12_15_13_20_43.txt  rp2040_1_cycles_50k_2025_12_15_13_20_43_metadata.csv  rp2040_1_pio_50k_2025_12_15_13_30_14_metadata.csv  rp2040_1k_steps_2025_12_15_08_36_22_metadata.csv  rp2040_2025_12_15_08_29_59.txt  rp2040_2025_12_15_08_29_59_metadata.csv  rp2040_2_50k_pio_2025_12_15_15_20_57.txt  rp2040_2_pio_75k_2025_12_15_14_13_21_metadata.csv  rp2040_dynamic_2.1_2025_12_15_11_45_42.txt  rp2040_dynamic_2.1_2025_12_15_11_45_42_metadata.csv  rp2040_dynamic_2_2025_12_15_11_43_30.txt  rp2040_dynamic_2_2025_12_15_11_43_30_metadata.csv  rp2350_0_riscv_6_50k_pio_2025_12_15_13_15_17.txt  rp2350_arm_1k_steps_2025_12_15_10_36_40_metadata.csv  rp2350_arm_2025_12_15_10_30_40.txt  rp2350_arm_2025_12_15_10_30_40_metadata.csv  rp2350_arm_5_50k_pio_2025_12_15_15_14_54.txt  rp2350_arm_5_cycles_100k_2025_12_15_16_35_43.txt  rp2350_arm_5_cycles_100k_2025_12_15_16_35_43_metadata.csv  rp2350_arm_5_cycles_75k_2025_12_15_13_43_23.txt  rp2350_arm_5_cycles_75k_2025_12_15_13_43_23_metadata.csv  rp2350_arm_5_passive_30k_2025_12_15_12_50_21.txt  rp2350_arm_5_passive_30k_2025_12_15_12_50_21_metadata.csv  rp2350_arm_6_cycles_30k_2025_12_15_12_56_17.txt  rp2350_arm_6_cycles_30k_2025_12_15_12_56_17_metadata.csv  rp2350_arm_7_pio_75k_2025_12_15_13_50_21.txt  rp2350_arm_9_50k_cycles_2025_12_15_13_17_33.txt  rp2350_arm_9_50k_cycles_2025_12_15_13_17_33_metadata.csv  rp2350_arm_9_cycles_30k_2025_12_15_12_57_30.txt  (+17 more)
(+21 files in other folders)
